set03/problem04errorlogs.txt
problem04.c: In function 'output':
problem04.c:34:12: warning: missing terminating " character
     printf("fibo(%d) = %d \n
            ^
problem04.c:34:12: error: missing terminating " character
     printf("fibo(%d) = %d \n
            ^~~~~~~~~~~~~~~~~
problem04.c:34:5: error: expected expression at end of input
     printf("fibo(%d) = %d \n
     ^~~~~~
problem04.c:34:5: error: expected declaration or statement at end of input